wx-core/include/generated/ffi_c.h

// CLASS: wxCommandProcessor
wxClassInfo *wxCommandProcessor_CLASSINFO();
wxCommandProcessor *wxCommandProcessor_new(int max_commands);
bool wxCommandProcessor_CanUndo(const wxCommandProcessor * self);
bool wxCommandProcessor_CanRedo(const wxCommandProcessor * self);
void wxCommandProcessor_ClearCommands(wxCommandProcessor * self);
wxCommand * wxCommandProcessor_GetCurrentCommand(const wxCommandProcessor * self);
wxMenu * wxCommandProcessor_GetEditMenu(const wxCommandProcessor * self);
int wxCommandProcessor_GetMaxCommands(const wxCommandProcessor * self);
wxString *wxCommandProcessor_GetRedoAccelerator(const wxCommandProcessor * self);
wxString *wxCommandProcessor_GetRedoMenuLabel(const wxCommandProcessor * self);
wxString *wxCommandProcessor_GetUndoAccelerator(const wxCommandProcessor * self);
wxString *wxCommandProcessor_GetUndoMenuLabel(const wxCommandProcessor * self);
void wxCommandProcessor_Initialize(wxCommandProcessor * self);
bool wxCommandProcessor_IsDirty(const wxCommandProcessor * self);
void wxCommandProcessor_MarkAsSaved(wxCommandProcessor * self);
bool wxCommandProcessor_Redo(wxCommandProcessor * self);
void wxCommandProcessor_SetEditMenu(wxCommandProcessor * self, wxMenu * menu);
void wxCommandProcessor_SetMenuStrings(wxCommandProcessor * self);
void wxCommandProcessor_SetRedoAccelerator(wxCommandProcessor * self, const wxString * accel);
void wxCommandProcessor_SetUndoAccelerator(wxCommandProcessor * self, const wxString * accel);
bool wxCommandProcessor_Submit(wxCommandProcessor * self, wxCommand * command, bool store_it);
void wxCommandProcessor_Store(wxCommandProcessor * self, wxCommand * command);
bool wxCommandProcessor_Undo(wxCommandProcessor * self);
// CLASS: wxContextHelp
wxClassInfo *wxContextHelp_CLASSINFO();
wxContextHelp *wxContextHelp_new(wxWindow * window, bool do_now);
bool wxContextHelp_BeginContextHelp(wxContextHelp * self, wxWindow * window);
bool wxContextHelp_EndContextHelp(wxContextHelp * self);
// CLASS: wxContextHelpButton
wxClassInfo *wxContextHelpButton_CLASSINFO();
wxContextHelpButton *wxContextHelpButton_new(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style);
// CLASS: wxContextMenuEvent
wxClassInfo *wxContextMenuEvent_CLASSINFO();
wxPoint *wxContextMenuEvent_GetPosition(const wxContextMenuEvent * self);
void wxContextMenuEvent_SetPosition(wxContextMenuEvent * self, const wxPoint * point);
// CLASS: wxControl
wxClassInfo *wxControl_CLASSINFO();
wxControl *wxControl_new(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
wxControl *wxControl_new1();
bool wxControl_Create(wxControl * self, wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
void wxControl_Command(wxControl * self, wxCommandEvent * event);
wxString *wxControl_GetLabelText(const wxControl * self);
wxSize *wxControl_GetSizeFromTextSize(const wxControl * self, int xlen, int ylen);
wxSize *wxControl_GetSizeFromTextSize1(const wxControl * self, const wxSize * tsize);
wxSize *wxControl_GetSizeFromText(const wxControl * self, const wxString * text);
void wxControl_SetLabelText(wxControl * self, const wxString * text);
bool wxControl_SetLabelMarkup(wxControl * self, const wxString * markup);
wxString *wxControl_GetLabelText1(const wxString * label);
wxString *wxControl_RemoveMnemonics(const wxString * str);
wxString *wxControl_EscapeMnemonics(const wxString * text);
wxString *wxControl_Ellipsize(const wxString * label, const wxDC * dc, wxEllipsizeMode mode, int max_width, int flags);
// CLASS: wxControlWithItems
wxClassInfo *wxControlWithItems_CLASSINFO();
// Mix-in(s) to wxControlWithItems
wxItemContainer *wxControlWithItems_AsItemContainer(wxControlWithItems* obj);
// CLASS: wxCredentialEntryDialog
wxClassInfo *wxCredentialEntryDialog_CLASSINFO();
wxCredentialEntryDialog *wxCredentialEntryDialog_new();
wxCredentialEntryDialog *wxCredentialEntryDialog_new1(wxWindow * parent, const wxString * message, const wxString * title, const wxWebCredentials * cred);
bool wxCredentialEntryDialog_Create(wxCredentialEntryDialog * self, wxWindow * parent, const wxString * message, const wxString * title, const wxWebCredentials * cred);
void wxCredentialEntryDialog_SetUser(wxCredentialEntryDialog * self, const wxString * user);
void wxCredentialEntryDialog_SetPassword(wxCredentialEntryDialog * self, const wxString * password);
// CLASS: wxCursor
wxClassInfo *wxCursor_CLASSINFO();
wxCursor *wxCursor_new();
wxCursor *wxCursor_new4(const wxImage * image);
wxCursor *wxCursor_new5(const char *const * xpm_data);
wxCursor *wxCursor_new6(const wxCursor * cursor);
bool wxCursor_IsOk(const wxCursor * self);
wxPoint *wxCursor_GetHotSpot(const wxCursor * self);
// CLASS: wxCustomDataObject
void wxCustomDataObject_delete(wxCustomDataObject *self);
wxCustomDataObject *wxCustomDataObject_new(const wxDataFormat * format);
void * wxCustomDataObject_Alloc(wxCustomDataObject * self, size_t size);
void wxCustomDataObject_Free(wxCustomDataObject * self);
void * wxCustomDataObject_GetData(const wxCustomDataObject * self);
size_t wxCustomDataObject_GetSize(const wxCustomDataObject * self);
void wxCustomDataObject_TakeData(wxCustomDataObject * self, size_t size, void * data);