wx-core/src/generated/ffi_c.rs


    // wxCommandProcessor
    pub fn wxCommandProcessor_CLASSINFO() -> *mut c_void;
    pub fn wxCommandProcessor_new(max_commands: c_int) -> *mut c_void;
    // DTOR: pub fn wxCommandProcessor_~wxCommandProcessor(self_: *mut c_void);
    pub fn wxCommandProcessor_CanUndo(self_: *const c_void) -> bool;
    pub fn wxCommandProcessor_CanRedo(self_: *const c_void) -> bool;
    pub fn wxCommandProcessor_ClearCommands(self_: *mut c_void);
    // BLOCKED: pub fn wxCommandProcessor_GetCommands(self_: *mut c_void) -> *mut c_void;
    pub fn wxCommandProcessor_GetCurrentCommand(self_: *const c_void) -> *mut c_void;
    pub fn wxCommandProcessor_GetEditMenu(self_: *const c_void) -> *mut c_void;
    pub fn wxCommandProcessor_GetMaxCommands(self_: *const c_void) -> c_int;
    pub fn wxCommandProcessor_GetRedoAccelerator(self_: *const c_void) -> *mut c_void;
    pub fn wxCommandProcessor_GetRedoMenuLabel(self_: *const c_void) -> *mut c_void;
    pub fn wxCommandProcessor_GetUndoAccelerator(self_: *const c_void) -> *mut c_void;
    pub fn wxCommandProcessor_GetUndoMenuLabel(self_: *const c_void) -> *mut c_void;
    pub fn wxCommandProcessor_Initialize(self_: *mut c_void);
    pub fn wxCommandProcessor_IsDirty(self_: *const c_void) -> bool;
    pub fn wxCommandProcessor_MarkAsSaved(self_: *mut c_void);
    pub fn wxCommandProcessor_Redo(self_: *mut c_void) -> bool;
    pub fn wxCommandProcessor_SetEditMenu(self_: *mut c_void, menu: *mut c_void);
    pub fn wxCommandProcessor_SetMenuStrings(self_: *mut c_void);
    pub fn wxCommandProcessor_SetRedoAccelerator(self_: *mut c_void, accel: *const c_void);
    pub fn wxCommandProcessor_SetUndoAccelerator(self_: *mut c_void, accel: *const c_void);
    pub fn wxCommandProcessor_Submit(
        self_: *mut c_void,
        command: *mut c_void,
        store_it: bool,
    ) -> bool;
    pub fn wxCommandProcessor_Store(self_: *mut c_void, command: *mut c_void);
    pub fn wxCommandProcessor_Undo(self_: *mut c_void) -> bool;

    // wxContextHelp
    pub fn wxContextHelp_CLASSINFO() -> *mut c_void;
    pub fn wxContextHelp_new(window: *mut c_void, do_now: bool) -> *mut c_void;
    // DTOR: pub fn wxContextHelp_~wxContextHelp(self_: *mut c_void);
    pub fn wxContextHelp_BeginContextHelp(self_: *mut c_void, window: *mut c_void) -> bool;
    pub fn wxContextHelp_EndContextHelp(self_: *mut c_void) -> bool;

    // wxContextHelpButton
    pub fn wxContextHelpButton_CLASSINFO() -> *mut c_void;
    pub fn wxContextHelpButton_new(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
    ) -> *mut c_void;

    // wxContextMenuEvent
    pub fn wxContextMenuEvent_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxContextMenuEvent_new(type_: wxEventType, id: c_int, pos: *const c_void) -> *mut c_void;
    pub fn wxContextMenuEvent_GetPosition(self_: *const c_void) -> *mut c_void;
    pub fn wxContextMenuEvent_SetPosition(self_: *mut c_void, point: *const c_void);

    // wxControl
    pub fn wxControl_CLASSINFO() -> *mut c_void;
    pub fn wxControl_new(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    pub fn wxControl_new1() -> *mut c_void;
    pub fn wxControl_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    pub fn wxControl_Command(self_: *mut c_void, event: *mut c_void);
    pub fn wxControl_GetLabelText(self_: *const c_void) -> *mut c_void;
    pub fn wxControl_GetSizeFromTextSize(
        self_: *const c_void,
        xlen: c_int,
        ylen: c_int,
    ) -> *mut c_void;
    pub fn wxControl_GetSizeFromTextSize1(
        self_: *const c_void,
        tsize: *const c_void,
    ) -> *mut c_void;
    pub fn wxControl_GetSizeFromText(self_: *const c_void, text: *const c_void) -> *mut c_void;
    pub fn wxControl_SetLabelText(self_: *mut c_void, text: *const c_void);
    pub fn wxControl_SetLabelMarkup(self_: *mut c_void, markup: *const c_void) -> bool;
    pub fn wxControl_GetLabelText1(label: *const c_void) -> *mut c_void;
    pub fn wxControl_RemoveMnemonics(str: *const c_void) -> *mut c_void;
    pub fn wxControl_EscapeMnemonics(text: *const c_void) -> *mut c_void;
    pub fn wxControl_Ellipsize(
        label: *const c_void,
        dc: *const c_void,
        mode: c_int,
        max_width: c_int,
        flags: c_int,
    ) -> *mut c_void;

    // wxControlWithItems
    pub fn wxControlWithItems_CLASSINFO() -> *mut c_void;
    // Mix-in(s) to wxControlWithItems
    pub fn wxControlWithItems_AsItemContainer(obj: *mut c_void) -> *mut c_void;

    // wxCredentialEntryDialog
    pub fn wxCredentialEntryDialog_CLASSINFO() -> *mut c_void;
    pub fn wxCredentialEntryDialog_new() -> *mut c_void;
    pub fn wxCredentialEntryDialog_new1(
        parent: *mut c_void,
        message: *const c_void,
        title: *const c_void,
        cred: *const c_void,
    ) -> *mut c_void;
    pub fn wxCredentialEntryDialog_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        message: *const c_void,
        title: *const c_void,
        cred: *const c_void,
    ) -> bool;
    // NOT_SUPPORTED: pub fn wxCredentialEntryDialog_GetCredentials(self_: *const c_void) -> wxWebCredentials;
    pub fn wxCredentialEntryDialog_SetUser(self_: *mut c_void, user: *const c_void);
    pub fn wxCredentialEntryDialog_SetPassword(self_: *mut c_void, password: *const c_void);

    // wxCursor
    pub fn wxCursor_CLASSINFO() -> *mut c_void;
    pub fn wxCursor_new() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxCursor_new1(bits: char, width: c_int, height: c_int, hot_spot_x: c_int, hot_spot_y: c_int, mask_bits: char) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxCursor_new2(cursor_name: *const c_void, type_: wxBitmapType, hot_spot_x: c_int, hot_spot_y: c_int) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxCursor_new3(cursor_id: wxStockCursor) -> *mut c_void;
    pub fn wxCursor_new4(image: *const c_void) -> *mut c_void;
    pub fn wxCursor_new5(xpm_data: *const c_void) -> *mut c_void;
    pub fn wxCursor_new6(cursor: *const c_void) -> *mut c_void;
    // DTOR: pub fn wxCursor_~wxCursor(self_: *mut c_void);
    pub fn wxCursor_IsOk(self_: *const c_void) -> bool;
    pub fn wxCursor_GetHotSpot(self_: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn wxCursor_operator=(self_: *mut c_void, cursor: *const c_void) -> *mut c_void;

    // wxCustomDataObject
    pub fn wxCustomDataObject_delete(self_: *mut c_void);
    pub fn wxCustomDataObject_new(format: *const c_void) -> *mut c_void;
    // DTOR: pub fn wxCustomDataObject_~wxCustomDataObject(self_: *mut c_void);
    pub fn wxCustomDataObject_Alloc(self_: *mut c_void, size: usize) -> *mut c_void;
    pub fn wxCustomDataObject_Free(self_: *mut c_void);
    pub fn wxCustomDataObject_GetData(self_: *const c_void) -> *mut c_void;
    pub fn wxCustomDataObject_GetSize(self_: *const c_void) -> usize;
    pub fn wxCustomDataObject_TakeData(self_: *mut c_void, size: usize, data: *mut c_void);

}
